Fix registration flows: Direct dashboard redirect for donor, volunteer, and beneficiary roles

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_BASE_URL=https://orbosis-backend-ngo-ssc0.onrender.com/
+VITE_API_BASE_URL=http://localhost:3002
 
 # Analytics Configuration (optional)
 # VITE_GA4_MEASUREMENT_ID=G-XXXXXXXXXX
